// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FrontPage /> should render 1`] = `
.c26 {
  font-family: "IBM Plex Mono",Lucida Sans Typewriter;
  font-weight: 700;
  grid-column-start: 3;
  font-size: 1.75rem;
  line-height: 2.25rem;
}

.c4 {
  text-decoration: none;
  transition-duration: 150ms;
  transition-property: color,background-color,border-color,text-decoration-color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  color: rgb(248, 207, 169);
}

.c4 :hover,
.c4 :active,
.c4 :focus {
  text-decoration: underline;
}

.c32 {
  text-decoration: none;
  transition-duration: 150ms;
  transition-property: color,background-color,border-color,text-decoration-color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  color: rgb(90, 94, 0);
}

.c32 :hover,
.c32 :active,
.c32 :focus {
  text-decoration: none;
}

.c41 {
  text-decoration: none;
  transition-duration: 150ms;
  transition-property: color,background-color,border-color,text-decoration-color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  color: rgb(90, 94, 0);
}

.c41 :hover,
.c41 :active,
.c41 :focus {
  text-decoration: underline;
}

.c27 {
  font-size: 1.5rem;
  line-height: 2rem;
  font-family: "IBM Plex Sans",Trebuchet MS;
  font-weight: 400;
  margin-bottom: 1rem;
  margin-top: 1rem;
}

.c39 {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  margin-top: 0.5rem;
}

.c40 {
  margin-right: 1rem;
}

.c40 :last-child {
  margin-right: 0px;
}

.c38 {
  display: flex;
  flex-direction: column;
}

.c37 {
  font-family: "IBM Plex Sans",Trebuchet MS;
  grid-column-start: auto;
}

.c33 {
  color: rgb(0, 0, 0);
}

.c33:hover .c36 {
  text-decoration: underline;
}

.c34 {
  aspect-ratio: 16/9;
  display: flex;
  width: 100%;
}

.c35 {
  align-items: flex-end;
  display: flex;
  margin-top: 0.25rem;
  position: relative;
  width: 100%;
  z-index: 40;
}

.c42 {
  font-size: 1.125rem;
  line-height: 1.75rem;
  margin-top: 0.25rem;
}

.c43 {
  white-space: nowrap;
}

.c31 {
  max-width: 35rem;
}

.c30 {
  column-gap: 4rem;
  display: grid;
  grid-column-start: 3;
  grid-template-columns: minmax(100%, 35rem);
  grid-template-rows: auto;
  justify-content: center;
  justify-items: center;
  margin-left: 0.5rem;
  margin-right: 0.5rem;
  margin-top: 2rem;
  row-gap: 3.5rem;
}

.c29 {
  grid-column-start: 3;
  margin-bottom: 1rem;
}

.c49 {
  align-items: center;
  display: flex;
  height: 100%;
  justify-content: center;
}

.c49 >* {
  fill: rgb(235, 235, 236);
  height: 2.25rem;
  width: 2.25rem;
  transition-duration: 150ms;
  transition-property: color,background-color,border-color,text-decoration-color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
}

.c48 {
  padding: 0px;
}

.c48 :hover,
.c48 :focus {
  fill: #4267B2;
}

.c50 {
  padding: 0px;
}

.c50 :hover,
.c50 :focus {
  fill: rgb(0, 0, 0);
}

.c51 {
  padding: 0px;
}

.c51 :hover,
.c51 :focus {
  fill: url(#instagram-gradient);
}

.c52 {
  padding: 0px;
}

.c52 :hover,
.c52 :focus {
  fill: #0E76A8;
}

.c53 {
  padding: 0px;
}

.c53 :hover,
.c53 :focus {
  fill: #0060df;
}

.c47 {
  gap: 1.5rem;
  justify-content: center;
}

.c45 {
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
}

.c45 >.,
.c45 >.c46 {
  align-items: center;
  display: flex;
  flex: 1;
  flex-direction: row;
  justify-content: center;
}

.c44 {
  align-items: center;
  background-color: rgb(0, 98, 114);
  color: rgb(255, 255, 255);
  display: flex;
  grid-area: footer;
  justify-content: center;
}

.c5 {
  font-size: 1.75rem;
  line-height: 2.25rem;
  font-family: "Krana Fat",Trebuchet MS;
}

.c8 {
  font-size: 1.5rem;
  line-height: 2rem;
  font-family: "IBM Plex Sans",Trebuchet MS;
}

.c11 {
  align-items: center;
  display: flex;
  gap: 2.5rem;
  width: 50%;
  justify-content: flex-start;
}

.c12 {
  align-items: center;
  display: flex;
  gap: 2.5rem;
  width: 50%;
  justify-content: flex-end;
}

.c9 {
  display: flex;
  flex-direction: row;
  margin: auto;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  width: 75rem;
}

.c2 {
  align-items: center;
  display: flex;
  flex: 1;
  justify-content: space-between;
  margin-left: 0.5rem;
  margin-right: 0.5rem;
}

.c6 {
  align-items: center;
  background: rgb(0, 98, 114);
  display: flex;
  flex-direction: column;
  gap: 2.5rem;
  justify-content: center;
  overflow: hidden;
  position: absolute;
  top: 3.75rem;
  transition: height 0.3s ease-in-out;
  width: 100vw;
  height: 0;
}

.c6 .c7 {
  transition: opacity 0.3s ease-in-out;
}

.c6 .c7 {
  opacity: 0;
}

.c3 {
  display: flex;
}

.c10 {
  display: none;
}

.c1 {
  background-color: rgb(0, 98, 114);
  box-sizing: border-box;
  display: flex;
  flex-direction: row;
  height: 3.75rem;
  position: fixed;
  user-select: none;
  width: 100%;
  z-index: 50;
}

.c17 {
  font-size: 3rem;
  line-height: 1;
  font-family: "Krana Fat",Trebuchet MS;
  position: fixed;
  top: 0.5rem;
  z-index: 50;
}

.c18 {
  font-size: 1.5rem;
  line-height: 2rem;
  font-weight: 700;
}

.c20 {
  font-size: 2.25rem;
  line-height: 2.5rem;
  font-weight: 700;
}

.c16 {
  color: rgb(248, 207, 169);
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
  padding: 0.875rem;
}

.c25 {
  bottom: 0;
  margin-top: auto;
  right: -5rem;
}

.c21 {
  display: flex;
  flex: 1;
  overflow: hidden;
  position: relative;
}

.c21 .c24 {
  width: 360px;
}

.c22 {
  display: flex;
  height: 100%;
  position: absolute;
  width: 100%;
}

.c23 {
  height: 100%;
  width: 100%;
}

.c23:after {
  background-image: linear-gradient(rgba(0, 98, 114, 0.7), rgba(0, 98, 114, 0.7));
  bottom: 0;
  content: "";
  height: 100%;
  position: absolute;
  top: 0;
  width: 100%;
}

.c15 {
  align-items: stretch;
  background: rgb(0, 98, 114);
  display: flex;
  flex-direction: column;
  grid-column: 1/-1;
  height: 100vh;
  padding-top: 3.75rem;
}

.c13 {
  background-color: rgb(255, 255, 255);
  grid-area: main;
}

.c14 {
  display: grid;
  grid-template-columns: 1fr 0.5rem min(calc(75rem - 1rem), calc(100% - 1.125rem)) 0.5rem 1fr;
}

.c28 {
  grid-column-start: 3;
}

.c0 {
  display: grid;
  grid-template-areas: "main" "footer";
  grid-template-columns: repeat(1, minmax(0, 1fr));
  grid-template-rows: 1fr 9rem;
  min-height: 100vh;
  position: relative;
}

@media (min-width: 1200px) {
  .c30 {
    grid-template-columns: repeat(2, 35rem);
    margin-top: 3.5rem;
  }
}

@media (min-width: 1200px) {
  .c45 {
    flex-direction: row;
    padding-left: 0.5rem;
    padding-right: 0.5rem;
    width: 75rem;
  }

  .c45 >.{
    justify-content: flex-start;
  }

  .c45 >.c46 {
    justify-content: flex-end;
  }
}

@media (min-width: 1200px) {
  .c2 {
    display: none;
  }
}

@media (min-width: 1200px) {
  .c6 {
    display: none;
  }
}

@media (min-width: 1200px) {
  .c3 {
    display: none;
  }
}

@media (min-width: 1200px) {
  .c10 {
    display: flex;
  }
}

@media (min-width: 1200px) {
  .c17 {
    font-size: 6rem;
    line-height: 1;
    position: relative;
  }
}

@media (min-width: 1200px) {
  .c16 {
    align-items: flex-start;
    gap: 3rem;
    justify-content: center;
    padding: 3.75rem;
    width: 50%;
  }

  .c16 .c19 {
    margin-top: 3rem;
  }
}

@media (min-width: 1200px) {
  .c25 {
    position: absolute!important;
  }
}

@media (min-width: 1200px) {
  .c21 {
    overflow: visible;
    width: 50%;
  }

  .c21 .c24 {
    width: 560px;
  }
}

@media (min-width: 1200px) {
  .c22 {
    display: flex;
  }
}

@media (min-width: 1200px) {
  .c15 {
    flex-direction: row-reverse;
    height: 45rem;
  }
}

@media (min-width: 1200px) {
  .c0 {
    grid-template-rows: 1fr 6rem;
  }
}

<div>
  <div
    class="c0"
  >
    <header
      class="c1"
    >
      <div
        class="c2 c3"
      >
        <a
          class="c4 c5"
          href="/"
          title="Lauri Lavanti"
        >
          Lauri Lavanti
        </a>
        <div
          aria-expanded="false"
          aria-label="Avaa valikko"
          class="hamburger-react"
          role="button"
          style="cursor: pointer; height: 48px; position: relative; transition: 0.3s ease-in-out; user-select: none; width: 48px; outline: none;"
          tabindex="0"
        >
          <div
            style="transition: 0.15s ease-in-out 0.15s; transform: none;"
          >
            <div
              style="background: rgb(248, 207, 169); height: 3px; left: 4px; position: absolute; width: 40px; top: 12px; transition: 0.15s ease-in-out 0s; transform: none;"
            />
          </div>
          <div
            style="transition: 0.15s ease-in-out; opacity: 1;"
          >
            <div
              style="background: rgb(248, 207, 169); height: 3px; left: 4px; position: absolute; width: 40px; top: 23px; transition: 0.15s ease-in-out;"
            />
          </div>
          <div
            style="transition: 0.15s ease-in-out 0.15s; transform: none;"
          >
            <div
              style="background: rgb(248, 207, 169); height: 3px; left: 4px; position: absolute; width: 40px; top: 34px; transition: 0.15s ease-in-out 0s; transform: none;"
            />
          </div>
        </div>
      </div>
      <div
        class="c6 c3"
      >
        <a
          class="c4 c7 c8"
          href="/minusta/"
          title="Lauri Lavanti - Liberaalia ja kestävää politiikkaa"
        >
          Minusta
        </a>
        <a
          class="c4 c7 c8"
          href="/blogi/"
          title="Blogi"
        >
          Blogi
        </a>
        <a
          class="c4 c7 c8"
          href="/ota-yhteytta/"
          title="Ota yhteyttä"
        >
          Ota yhteyttä
        </a>
      </div>
      <div
        class="c9 c10"
      >
        <div
          class="c11"
        >
          <a
            class="c4 c5"
            href="/"
            title="Lauri Lavanti"
          >
            Lauri Lavanti
          </a>
        </div>
        <div
          class="c12"
        >
          <a
            class="c4 c7 c8"
            href="/minusta/"
            title="Lauri Lavanti - Liberaalia ja kestävää politiikkaa"
          >
            Minusta
          </a>
          <a
            class="c4 c7 c8"
            href="/blogi/"
            title="Blogi"
          >
            Blogi
          </a>
          <a
            class="c4 c7 c8"
            href="/ota-yhteytta/"
            title="Ota yhteyttä"
          >
            Ota yhteyttä
          </a>
        </div>
      </div>
    </header>
    <main
      class="c13"
    >
      <article
        class="c14"
      >
        <div
          class="c15"
        >
          <div
            class="c16"
          >
            <h1
              class="c17"
            >
              Lauri Lavanti
            </h1>
            <p
              class="c18"
            >
              Ehdolla kunta- ja aluevaaleissa 2025
            </p>
            <h2
              class="c19 c20"
            >
              Kasvava ja kestävä Kirkkonummi
            </h2>
          </div>
          <div
            class="c21"
          >
            <div
              class="c22"
            >
              <div
                class="gatsby-image-wrapper gatsby-image-wrapper-constrained c23"
                data-gatsby-image-wrapper=""
                style="position: relative; overflow: hidden; display: inline-block; vertical-align: top;"
              >
                <div
                  style="max-width: 4032px; display: block;"
                >
                  <img
                    alt=""
                    aria-hidden="true"
                    role="presentation"
                    src="data:image/svg+xml;charset=utf-8,%3Csvg%20height='1728'%20width='4032'%20xmlns='http://www.w3.org/2000/svg'%20version='1.1'%3E%3C/svg%3E"
                    style="max-width: 100%; display: block; position: static;"
                  />
                </div>
                <img
                  alt=""
                  aria-hidden="true"
                  data-placeholder-image=""
                  decoding="async"
                  src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQEBLAEsAAD/2wBDABALDA4MChAODQ4SERATGCgaGBYWGDEjJR0oOjM9PDkzODdASFxOQERXRTc4UG1RV19iZ2hnPk1xeXBkeFxlZ2P/2wBDARESEhgVGC8aGi9jQjhCY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2P/wAARCAAJABQDAREAAhEBAxEB/8QAFQABAQAAAAAAAAAAAAAAAAAABQT/xAAiEAACAQIGAwEAAAAAAAAAAAABAhEAAwQFEhMxcTI1QXL/xAAYAQEAAwEAAAAAAAAAAAAAAAADAAIEAf/EABsRAQACAwEBAAAAAAAAAAAAAAABAgMRMSES/9oADAMBAAIRAxEAPwA6zlpYFt6BMERxQ7X+TOZ4BsFhVu7qvpUK2lYHdTLTUbHb3kASzIYVWjn6aBWfV9vxPVLLQQz71dj8iu5OQO/Atrg91msN/9k="
                  style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
                />
                <picture>
                  <source
                    sizes="(min-width: 4032px) 4032px, 100vw"
                    srcset="https://images.ctfassets.net/44t6u1r4zgqq/5aPvGwEnquvx8jkXJmkYE5/25e52ab22adc2730dce65ab3686cf060/Lauri-Lavanti-21-9.jpg?w=1008&h=432&q=50&fm=webp 1008w,https://images.ctfassets.net/44t6u1r4zgqq/5aPvGwEnquvx8jkXJmkYE5/25e52ab22adc2730dce65ab3686cf060/Lauri-Lavanti-21-9.jpg?w=2016&h=864&q=50&fm=webp 2016w,https://images.ctfassets.net/44t6u1r4zgqq/5aPvGwEnquvx8jkXJmkYE5/25e52ab22adc2730dce65ab3686cf060/Lauri-Lavanti-21-9.jpg?w=4000&h=1714&q=50&fm=webp 4000w"
                    type="image/webp"
                  />
                  <img
                    alt=""
                    data-gatsby-image-ssr=""
                    data-main-image=""
                    decoding="async"
                    loading="eager"
                    sizes="(min-width: 4032px) 4032px, 100vw"
                    src="https://images.ctfassets.net/44t6u1r4zgqq/5aPvGwEnquvx8jkXJmkYE5/25e52ab22adc2730dce65ab3686cf060/Lauri-Lavanti-21-9.jpg?w=1008&h=432&fl=progressive&q=50&fm=jpg"
                    srcset="https://images.ctfassets.net/44t6u1r4zgqq/5aPvGwEnquvx8jkXJmkYE5/25e52ab22adc2730dce65ab3686cf060/Lauri-Lavanti-21-9.jpg?w=1008&h=432&fl=progressive&q=50&fm=jpg 1008w,https://images.ctfassets.net/44t6u1r4zgqq/5aPvGwEnquvx8jkXJmkYE5/25e52ab22adc2730dce65ab3686cf060/Lauri-Lavanti-21-9.jpg?w=2016&h=864&fl=progressive&q=50&fm=jpg 2016w,https://images.ctfassets.net/44t6u1r4zgqq/5aPvGwEnquvx8jkXJmkYE5/25e52ab22adc2730dce65ab3686cf060/Lauri-Lavanti-21-9.jpg?w=4000&h=1714&fl=progressive&q=50&fm=jpg 4000w"
                    style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; object-fit: cover; opacity: 0;"
                  />
                </picture>
                <noscript />
                <script
                  type="module"
                >
                  const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1,e.parentNode.parentNode.querySelector("[data-placeholder-image]").style.opacity=0)}}
                </script>
              </div>
            </div>
            <div
              class="gatsby-image-wrapper gatsby-image-wrapper-constrained c24 c25"
              data-gatsby-image-wrapper=""
              style="position: relative; overflow: hidden; display: inline-block; vertical-align: top;"
            >
              <div
                style="max-width: 4032px; display: block;"
              >
                <img
                  alt=""
                  aria-hidden="true"
                  role="presentation"
                  src="data:image/svg+xml;charset=utf-8,%3Csvg%20height='1728'%20width='4032'%20xmlns='http://www.w3.org/2000/svg'%20version='1.1'%3E%3C/svg%3E"
                  style="max-width: 100%; display: block; position: static;"
                />
              </div>
              <img
                alt=""
                aria-hidden="true"
                data-placeholder-image=""
                decoding="async"
                src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQEBLAEsAAD/2wBDABALDA4MChAODQ4SERATGCgaGBYWGDEjJR0oOjM9PDkzODdASFxOQERXRTc4UG1RV19iZ2hnPk1xeXBkeFxlZ2P/2wBDARESEhgVGC8aGi9jQjhCY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2P/wAARCAAJABQDAREAAhEBAxEB/8QAFQABAQAAAAAAAAAAAAAAAAAABQT/xAAiEAACAQIGAwEAAAAAAAAAAAABAhEAAwQFEhMxcTI1QXL/xAAYAQEAAwEAAAAAAAAAAAAAAAADAAIEAf/EABsRAQACAwEBAAAAAAAAAAAAAAABAgMRMSES/9oADAMBAAIRAxEAPwA6zlpYFt6BMERxQ7X+TOZ4BsFhVu7qvpUK2lYHdTLTUbHb3kASzIYVWjn6aBWfV9vxPVLLQQz71dj8iu5OQO/Atrg91msN/9k="
                style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
              />
              <picture>
                <source
                  sizes="(min-width: 4032px) 4032px, 100vw"
                  srcset="https://images.ctfassets.net/44t6u1r4zgqq/5aPvGwEnquvx8jkXJmkYE5/25e52ab22adc2730dce65ab3686cf060/Lauri-Lavanti-21-9.jpg?w=1008&h=432&q=50&fm=webp 1008w,https://images.ctfassets.net/44t6u1r4zgqq/5aPvGwEnquvx8jkXJmkYE5/25e52ab22adc2730dce65ab3686cf060/Lauri-Lavanti-21-9.jpg?w=2016&h=864&q=50&fm=webp 2016w,https://images.ctfassets.net/44t6u1r4zgqq/5aPvGwEnquvx8jkXJmkYE5/25e52ab22adc2730dce65ab3686cf060/Lauri-Lavanti-21-9.jpg?w=4000&h=1714&q=50&fm=webp 4000w"
                  type="image/webp"
                />
                <img
                  alt="Kuva Lauri Lavannista, taustalla näkyy metsää"
                  data-gatsby-image-ssr=""
                  data-main-image=""
                  decoding="async"
                  loading="eager"
                  sizes="(min-width: 4032px) 4032px, 100vw"
                  src="https://images.ctfassets.net/44t6u1r4zgqq/5aPvGwEnquvx8jkXJmkYE5/25e52ab22adc2730dce65ab3686cf060/Lauri-Lavanti-21-9.jpg?w=1008&h=432&fl=progressive&q=50&fm=jpg"
                  srcset="https://images.ctfassets.net/44t6u1r4zgqq/5aPvGwEnquvx8jkXJmkYE5/25e52ab22adc2730dce65ab3686cf060/Lauri-Lavanti-21-9.jpg?w=1008&h=432&fl=progressive&q=50&fm=jpg 1008w,https://images.ctfassets.net/44t6u1r4zgqq/5aPvGwEnquvx8jkXJmkYE5/25e52ab22adc2730dce65ab3686cf060/Lauri-Lavanti-21-9.jpg?w=2016&h=864&fl=progressive&q=50&fm=jpg 2016w,https://images.ctfassets.net/44t6u1r4zgqq/5aPvGwEnquvx8jkXJmkYE5/25e52ab22adc2730dce65ab3686cf060/Lauri-Lavanti-21-9.jpg?w=4000&h=1714&fl=progressive&q=50&fm=jpg 4000w"
                  style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; object-fit: contain; opacity: 0;"
                />
              </picture>
              <noscript />
              <script
                type="module"
              >
                const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1,e.parentNode.parentNode.querySelector("[data-placeholder-image]").style.opacity=0)}}
              </script>
            </div>
          </div>
        </div>
        <h2
          class="c26"
          id="lyhyesti"
        >
          Lyhyesti
        </h2>
        <p
          class="c27 c28"
        >
          Kirkkonummelainen politiikasta kiinnostunut diplomi-insinööri. Vihreiden luottamushenkilö (entisen perusturvajaoston jäsen, suomenkielisen kasvatus- ja koulutuslautakunnan varajäsen), ohjelmistokehittäjä ja kolmen lapsen isä.
        </p>
        <h2
          class="c26"
          id="uusimmat-kirjoitukset"
        >
          Uusimmat kirjoitukset
        </h2>
        <hr
          class="c29"
        />
        <ul
          class="c30"
        >
          <li
            class="c31"
          >
            <article
              aria-label="VBO:n vaalit koskettavat meitä kaikkia"
              itemscope=""
              itemtype="https://schema.org/CreativeWork"
            >
              <a
                class="c32 c33"
                href="/blogi/osuuskauppavaalit-koskettavat-meita-kaikkia/"
                rel="permalink"
              >
                <div
                  class="gatsby-image-wrapper c34"
                  data-gatsby-image-wrapper=""
                  style="position: relative; overflow: hidden; width: 1921px; height: 384px;"
                >
                  <img
                    alt=""
                    aria-hidden="true"
                    data-placeholder-image=""
                    decoding="async"
                    src="data:image/jpeg;base64,/9j/2wBDABALDA4MChAODQ4SERATGCgaGBYWGDEjJR0oOjM9PDkzODdASFxOQERXRTc4UG1RV19iZ2hnPk1xeXBkeFxlZ2P/2wBDARESEhgVGC8aGi9jQjhCY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2P/wgARCAAEABQDASIAAhEBAxEB/8QAFwABAAMAAAAAAAAAAAAAAAAAAAMEBf/EABYBAQEBAAAAAAAAAAAAAAAAAAIAAf/aAAwDAQACEAMQAAABhugssDP/xAAXEAADAQAAAAAAAAAAAAAAAAAAAQID/9oACAEBAAEFAlnJtCiT/8QAFREBAQAAAAAAAAAAAAAAAAAAARD/2gAIAQMBAT8BZ//EABURAQEAAAAAAAAAAAAAAAAAABBB/9oACAECAQE/AYf/xAAXEAADAQAAAAAAAAAAAAAAAAAAARAR/9oACAEBAAY/AhZP/8QAGBAAAgMAAAAAAAAAAAAAAAAAAAERITH/2gAIAQEAAT8h1WPJnkWSf//aAAwDAQACAAMAAAAQh+//xAAVEQEBAAAAAAAAAAAAAAAAAAAQMf/aAAgBAwEBPxCT/8QAFhEAAwAAAAAAAAAAAAAAAAAAARAx/9oACAECAQE/EDS//8QAGBABAQEBAQAAAAAAAAAAAAAAAREhADH/2gAIAQEAAT8QwKqz3ktUFq5LysQC753/2Q=="
                    style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
                  />
                  <picture>
                    <source
                      data-srcset="/static/963e993925c36bdbb3eea7c759902afb/ba007/lauri-lavanti.webp 1921w,/static/963e993925c36bdbb3eea7c759902afb/d563d/lauri-lavanti.webp 3842w"
                      sizes="1921px"
                      type="image/webp"
                    />
                    <img
                      alt="Kuva Lauri Lavannista, taustalla näkyy koira"
                      data-gatsby-image-ssr=""
                      data-main-image=""
                      data-src="/static/963e993925c36bdbb3eea7c759902afb/06c10/lauri-lavanti.jpg"
                      data-srcset="/static/963e993925c36bdbb3eea7c759902afb/06c10/lauri-lavanti.jpg 1921w,/static/963e993925c36bdbb3eea7c759902afb/3ca67/lauri-lavanti.jpg 3842w"
                      decoding="async"
                      loading="lazy"
                      sizes="1921px"
                      style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; opacity: 0;"
                    />
                  </picture>
                  <noscript />
                  <script
                    type="module"
                  >
                    const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1,e.parentNode.parentNode.querySelector("[data-placeholder-image]").style.opacity=0)}}
                  </script>
                </div>
                <div
                  class="c35"
                >
                  <h2
                    class="c36 c26 c37"
                    id="vbo:n-vaalit-koskettavat-meita-kaikkia"
                    itemprop="headline"
                  >
                    VBO:n vaalit koskettavat meitä kaikkia
                  </h2>
                </div>
              </a>
              <aside
                aria-label="Kirjoituksen VBO:n vaalit koskettavat meitä kaikkia meta-tiedot"
                class="c38"
              >
                <time
                  datetime="2024-04-03"
                >
                  03.04.2024
                </time>
                <ul
                  class="c39"
                >
                  <li
                    class="c40"
                  >
                    <a
                      class="c41"
                      href="/kategoria/kaavoitus/"
                    >
                      #
                      kaavoitus
                    </a>
                  </li>
                  <li
                    class="c40"
                  >
                    <a
                      class="c41"
                      href="/kategoria/kirkkonummi/"
                    >
                      #
                      kirkkonummi
                    </a>
                  </li>
                  <li
                    class="c40"
                  >
                    <a
                      class="c41"
                      href="/kategoria/osuuskauppavaalit/"
                    >
                      #
                      osuuskauppavaalit
                    </a>
                  </li>
                </ul>
              </aside>
              <p
                class="c27 c42"
                itemprop="description"
              >
                Varuboden-Oslan osuuskauppavaalit ovat nyt käynnissä. Äänestämällä vaikutat ihmisten työpaikkoihin, kulutuskäyttäytymiseen sekä lähipalveluihin.
                 
                <a
                  class="c41 c43"
                  href="/blogi/osuuskauppavaalit-koskettavat-meita-kaikkia/"
                  rel="permalink"
                >
                  Lue lisää »
                </a>
              </p>
            </article>
          </li>
          <li
            class="c31"
          >
            <article
              aria-label="Luontomme on valttimme - vuodesta toiseen"
              itemscope=""
              itemtype="https://schema.org/CreativeWork"
            >
              <a
                class="c32 c33"
                href="/blogi/luontomme-on-valttimme-vuodesta-toiseen/"
                rel="permalink"
              >
                <div
                  class="gatsby-image-wrapper c34"
                  data-gatsby-image-wrapper=""
                  style="position: relative; overflow: hidden; width: 1921px; height: 384px;"
                >
                  <img
                    alt=""
                    aria-hidden="true"
                    data-placeholder-image=""
                    decoding="async"
                    src="data:image/jpeg;base64,/9j/2wBDABALDA4MChAODQ4SERATGCgaGBYWGDEjJR0oOjM9PDkzODdASFxOQERXRTc4UG1RV19iZ2hnPk1xeXBkeFxlZ2P/2wBDARESEhgVGC8aGi9jQjhCY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2P/wgARCAAEABQDASIAAhEBAxEB/8QAFwABAAMAAAAAAAAAAAAAAAAAAAMEBf/EABYBAQEBAAAAAAAAAAAAAAAAAAIAAf/aAAwDAQACEAMQAAABhugssDP/xAAXEAADAQAAAAAAAAAAAAAAAAAAAQID/9oACAEBAAEFAlnJtCiT/8QAFREBAQAAAAAAAAAAAAAAAAAAARD/2gAIAQMBAT8BZ//EABURAQEAAAAAAAAAAAAAAAAAABBB/9oACAECAQE/AYf/xAAXEAADAQAAAAAAAAAAAAAAAAAAARAR/9oACAEBAAY/AhZP/8QAGBAAAgMAAAAAAAAAAAAAAAAAAAERITH/2gAIAQEAAT8h1WPJnkWSf//aAAwDAQACAAMAAAAQh+//xAAVEQEBAAAAAAAAAAAAAAAAAAAQMf/aAAgBAwEBPxCT/8QAFhEAAwAAAAAAAAAAAAAAAAAAARAx/9oACAECAQE/EDS//8QAGBABAQEBAQAAAAAAAAAAAAAAAREhADH/2gAIAQEAAT8QwKqz3ktUFq5LysQC753/2Q=="
                    style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
                  />
                  <picture>
                    <source
                      data-srcset="/static/963e993925c36bdbb3eea7c759902afb/ba007/lauri-lavanti.webp 1921w,/static/963e993925c36bdbb3eea7c759902afb/d563d/lauri-lavanti.webp 3842w"
                      sizes="1921px"
                      type="image/webp"
                    />
                    <img
                      alt="Kuva Lauri Lavannista, taustalla näkyy metsää"
                      data-gatsby-image-ssr=""
                      data-main-image=""
                      data-src="/static/963e993925c36bdbb3eea7c759902afb/06c10/lauri-lavanti.jpg"
                      data-srcset="/static/963e993925c36bdbb3eea7c759902afb/06c10/lauri-lavanti.jpg 1921w,/static/963e993925c36bdbb3eea7c759902afb/3ca67/lauri-lavanti.jpg 3842w"
                      decoding="async"
                      loading="lazy"
                      sizes="1921px"
                      style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; opacity: 0;"
                    />
                  </picture>
                  <noscript />
                  <script
                    type="module"
                  >
                    const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1,e.parentNode.parentNode.querySelector("[data-placeholder-image]").style.opacity=0)}}
                  </script>
                </div>
                <div
                  class="c35"
                >
                  <h2
                    class="c36 c26 c37"
                    id="luontomme-on-valttimme---vuodesta-toiseen"
                    itemprop="headline"
                  >
                    Luontomme on valttimme - vuodesta toiseen
                  </h2>
                </div>
              </a>
              <aside
                aria-label="Kirjoituksen Luontomme on valttimme - vuodesta toiseen meta-tiedot"
                class="c38"
              >
                <time
                  datetime="2024-01-31"
                >
                  31.01.2024
                </time>
                <ul
                  class="c39"
                >
                  <li
                    class="c40"
                  >
                    <a
                      class="c41"
                      href="/kategoria/infra/"
                    >
                      #
                      infra
                    </a>
                  </li>
                  <li
                    class="c40"
                  >
                    <a
                      class="c41"
                      href="/kategoria/kaavoitus/"
                    >
                      #
                      kaavoitus
                    </a>
                  </li>
                  <li
                    class="c40"
                  >
                    <a
                      class="c41"
                      href="/kategoria/kirkkonummi/"
                    >
                      #
                      kirkkonummi
                    </a>
                  </li>
                </ul>
              </aside>
              <p
                class="c27 c42"
                itemprop="description"
              >
                Kirkkonummen tärkeimpiä vetovoimia on meidän luontomme. Nyt alkanut osallistava budjetointi on sen jälleen osoittanut.
                 
                <a
                  class="c41 c43"
                  href="/blogi/luontomme-on-valttimme-vuodesta-toiseen/"
                  rel="permalink"
                >
                  Lue lisää »
                </a>
              </p>
            </article>
          </li>
          <li
            class="c31"
          >
            <article
              aria-label="Uusi vuosi, tuttu talvikunnossapito"
              itemscope=""
              itemtype="https://schema.org/CreativeWork"
            >
              <a
                class="c32 c33"
                href="/blogi/uusi-vuosi-tuttu-talvikunnossapito/"
                rel="permalink"
              >
                <div
                  class="gatsby-image-wrapper c34"
                  data-gatsby-image-wrapper=""
                  style="position: relative; overflow: hidden; width: 1921px; height: 384px;"
                >
                  <img
                    alt=""
                    aria-hidden="true"
                    data-placeholder-image=""
                    decoding="async"
                    src="data:image/jpeg;base64,/9j/2wBDABALDA4MChAODQ4SERATGCgaGBYWGDEjJR0oOjM9PDkzODdASFxOQERXRTc4UG1RV19iZ2hnPk1xeXBkeFxlZ2P/2wBDARESEhgVGC8aGi9jQjhCY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2P/wgARCAAEABQDASIAAhEBAxEB/8QAFwABAAMAAAAAAAAAAAAAAAAAAAMEBf/EABYBAQEBAAAAAAAAAAAAAAAAAAIAAf/aAAwDAQACEAMQAAABhugssDP/xAAXEAADAQAAAAAAAAAAAAAAAAAAAQID/9oACAEBAAEFAlnJtCiT/8QAFREBAQAAAAAAAAAAAAAAAAAAARD/2gAIAQMBAT8BZ//EABURAQEAAAAAAAAAAAAAAAAAABBB/9oACAECAQE/AYf/xAAXEAADAQAAAAAAAAAAAAAAAAAAARAR/9oACAEBAAY/AhZP/8QAGBAAAgMAAAAAAAAAAAAAAAAAAAERITH/2gAIAQEAAT8h1WPJnkWSf//aAAwDAQACAAMAAAAQh+//xAAVEQEBAAAAAAAAAAAAAAAAAAAQMf/aAAgBAwEBPxCT/8QAFhEAAwAAAAAAAAAAAAAAAAAAARAx/9oACAECAQE/EDS//8QAGBABAQEBAQAAAAAAAAAAAAAAAREhADH/2gAIAQEAAT8QwKqz3ktUFq5LysQC753/2Q=="
                    style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
                  />
                  <picture>
                    <source
                      data-srcset="/static/963e993925c36bdbb3eea7c759902afb/ba007/lauri-lavanti.webp 1921w,/static/963e993925c36bdbb3eea7c759902afb/d563d/lauri-lavanti.webp 3842w"
                      sizes="1921px"
                      type="image/webp"
                    />
                    <img
                      alt="Kuva Lauri Lavannista, taustalla näkyy koira"
                      data-gatsby-image-ssr=""
                      data-main-image=""
                      data-src="/static/963e993925c36bdbb3eea7c759902afb/06c10/lauri-lavanti.jpg"
                      data-srcset="/static/963e993925c36bdbb3eea7c759902afb/06c10/lauri-lavanti.jpg 1921w,/static/963e993925c36bdbb3eea7c759902afb/3ca67/lauri-lavanti.jpg 3842w"
                      decoding="async"
                      loading="lazy"
                      sizes="1921px"
                      style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; opacity: 0;"
                    />
                  </picture>
                  <noscript />
                  <script
                    type="module"
                  >
                    const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1,e.parentNode.parentNode.querySelector("[data-placeholder-image]").style.opacity=0)}}
                  </script>
                </div>
                <div
                  class="c35"
                >
                  <h2
                    class="c36 c26 c37"
                    id="uusi-vuosi,-tuttu-talvikunnossapito"
                    itemprop="headline"
                  >
                    Uusi vuosi, tuttu talvikunnossapito
                  </h2>
                </div>
              </a>
              <aside
                aria-label="Kirjoituksen Uusi vuosi, tuttu talvikunnossapito meta-tiedot"
                class="c38"
              >
                <time
                  datetime="2024-01-12"
                >
                  12.01.2024
                </time>
                <ul
                  class="c39"
                >
                  <li
                    class="c40"
                  >
                    <a
                      class="c41"
                      href="/kategoria/infra/"
                    >
                      #
                      infra
                    </a>
                  </li>
                  <li
                    class="c40"
                  >
                    <a
                      class="c41"
                      href="/kategoria/kirkkonummi/"
                    >
                      #
                      kirkkonummi
                    </a>
                  </li>
                  <li
                    class="c40"
                  >
                    <a
                      class="c41"
                      href="/kategoria/liikenne/"
                    >
                      #
                      liikenne
                    </a>
                  </li>
                </ul>
              </aside>
              <p
                class="c27 c42"
                itemprop="description"
              >
                Kirkkonummen talvikunnossapito on jälleen osoittautunut yhtä huonoksi kuin edellisinäkin vuosina. Asiat voisivat olla myös toisin, kunhan vain yhdessä päättäisimme tavoitella laatua.
                 
                <a
                  class="c41 c43"
                  href="/blogi/uusi-vuosi-tuttu-talvikunnossapito/"
                  rel="permalink"
                >
                  Lue lisää »
                </a>
              </p>
            </article>
          </li>
        </ul>
        <p
          class="c27 c28"
        />
      </article>
    </main>
    <footer
      class="c44"
    >
      <div
        class="c45"
      >
        <div
          class=""
        >
          <img
            alt="Vihreiden logo ja teksti "Vihreät De Gröna""
            src="../../../static/images/Vihreat_Logo_HOR_NEG_FIN_SWE_ENG.png"
            width="200"
          />
        </div>
        <ul
          class="c46 c47"
        >
          <li
            class="c48"
          >
            <a
              class="c49"
              href="https://www.facebook.com/laurilavanti"
              rel="me noopener noreferrer"
              target="_blank"
              title="Facebook"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M512 256C512 114.6 397.4 0 256 0S0 114.6 0 256C0 376 82.7 476.8 194.2 504.5V334.2H141.4V256h52.8V222.3c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H287V510.1C413.8 494.8 512 386.9 512 256h0z"
                />
              </svg>
            </a>
          </li>
          <li
            class="c50"
          >
            <a
              class="c49"
              href="https://www.threads.net/@laurilavanti"
              rel="me noopener noreferrer"
              target="_blank"
              title="Threads"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 448 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M331.5 235.7c2.2 .9 4.2 1.9 6.3 2.8c29.2 14.1 50.6 35.2 61.8 61.4c15.7 36.5 17.2 95.8-30.3 143.2c-36.2 36.2-80.3 52.5-142.6 53h-.3c-70.2-.5-124.1-24.1-160.4-70.2c-32.3-41-48.9-98.1-49.5-169.6V256v-.2C17 184.3 33.6 127.2 65.9 86.2C102.2 40.1 156.2 16.5 226.4 16h.3c70.3 .5 124.9 24 162.3 69.9c18.4 22.7 32 50 40.6 81.7l-40.4 10.8c-7.1-25.8-17.8-47.8-32.2-65.4c-29.2-35.8-73-54.2-130.5-54.6c-57 .5-100.1 18.8-128.2 54.4C72.1 146.1 58.5 194.3 58 256c.5 61.7 14.1 109.9 40.3 143.3c28 35.6 71.2 53.9 128.2 54.4c51.4-.4 85.4-12.6 113.7-40.9c32.3-32.2 31.7-71.8 21.4-95.9c-6.1-14.2-17.1-26-31.9-34.9c-3.7 26.9-11.8 48.3-24.7 64.8c-17.1 21.8-41.4 33.6-72.7 35.3c-23.6 1.3-46.3-4.4-63.9-16c-20.8-13.8-33-34.8-34.3-59.3c-2.5-48.3 35.7-83 95.2-86.4c21.1-1.2 40.9-.3 59.2 2.8c-2.4-14.8-7.3-26.6-14.6-35.2c-10-11.7-25.6-17.7-46.2-17.8H227c-16.6 0-39 4.6-53.3 26.3l-34.4-23.6c19.2-29.1 50.3-45.1 87.8-45.1h.8c62.6 .4 99.9 39.5 103.7 107.7l-.2 .2zm-156 68.8c1.3 25.1 28.4 36.8 54.6 35.3c25.6-1.4 54.6-11.4 59.5-73.2c-13.2-2.9-27.8-4.4-43.4-4.4c-4.8 0-9.6 .1-14.4 .4c-42.9 2.4-57.2 23.2-56.2 41.8l-.1 .1z"
                />
              </svg>
            </a>
          </li>
          <li
            class="c51"
          >
            <a
              class="c49"
              href="https://www.instagram.com/laurilavanti/"
              rel="me noopener noreferrer"
              target="_blank"
              title="Instagram"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 448 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"
                />
              </svg>
            </a>
          </li>
          <li
            class="c52"
          >
            <a
              class="c49"
              href="https://www.linkedin.com/in/lapanti"
              rel="me noopener noreferrer"
              target="_blank"
              title="LinkedIn"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 448 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"
                />
              </svg>
            </a>
          </li>
          <li
            class="c53"
          >
            <a
              class="c49"
              href="https://bsky.app/profile/laurilavanti.fi"
              rel="me noopener noreferrer"
              target="_blank"
              title="Bluesky"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 576 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M407.8 294.7c-3.3-.4-6.7-.8-10-1.3c3.4 .4 6.7 .9 10 1.3zM288 227.1C261.9 176.4 190.9 81.9 124.9 35.3C61.6-9.4 37.5-1.7 21.6 5.5C3.3 13.8 0 41.9 0 58.4S9.1 194 15 213.9c19.5 65.7 89.1 87.9 153.2 80.7c3.3-.5 6.6-.9 10-1.4c-3.3 .5-6.6 1-10 1.4C74.3 308.6-9.1 342.8 100.3 464.5C220.6 589.1 265.1 437.8 288 361.1c22.9 76.7 49.2 222.5 185.6 103.4c102.4-103.4 28.1-156-65.8-169.9c-3.3-.4-6.7-.8-10-1.3c3.4 .4 6.7 .9 10 1.3c64.1 7.1 133.6-15.1 153.2-80.7C566.9 194 576 75 576 58.4s-3.3-44.7-21.6-52.9c-15.8-7.1-40-14.9-103.2 29.8C385.1 81.9 314.1 176.4 288 227.1z"
                />
              </svg>
            </a>
          </li>
        </ul>
      </div>
    </footer>
  </div>
  <svg
    aria-hidden="true"
    style="height: 0px; overflow: hidden; position: absolute; width: 0px;"
    version="1.1"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:xlink="http://www.w3.org/1999/xlink"
  >
    <defs>
      <svg
        height="0"
        width="0"
      >
        <radialgradient
          cx="30%"
          cy="107%"
          id="instagram-gradient"
          r="150%"
        >
          <stop
            offset="0"
            stop-color="#fdf497"
          />
          <stop
            offset="0.05"
            stop-color="#fdf497"
          />
          <stop
            offset="0.45"
            stop-color="#fd5949"
          />
          <stop
            offset="0.6"
            stop-color="#d6249f"
          />
          <stop
            offset="0.9"
            stop-color="#285AEB"
          />
        </radialgradient>
      </svg>
    </defs>
  </svg>
</div>
`;

exports[`<FrontPage /> should render with minimal 1`] = `
.c4 {
  text-decoration: none;
  transition-duration: 150ms;
  transition-property: color,background-color,border-color,text-decoration-color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  color: rgb(248, 207, 169);
}

.c4 :hover,
.c4 :active,
.c4 :focus {
  text-decoration: underline;
}

.c26 {
  align-items: center;
  display: flex;
  height: 100%;
  justify-content: center;
}

.c26 >* {
  fill: rgb(235, 235, 236);
  height: 2.25rem;
  width: 2.25rem;
  transition-duration: 150ms;
  transition-property: color,background-color,border-color,text-decoration-color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
}

.c25 {
  padding: 0px;
}

.c25 :hover,
.c25 :focus {
  fill: #4267B2;
}

.c27 {
  padding: 0px;
}

.c27 :hover,
.c27 :focus {
  fill: rgb(0, 0, 0);
}

.c28 {
  padding: 0px;
}

.c28 :hover,
.c28 :focus {
  fill: url(#instagram-gradient);
}

.c29 {
  padding: 0px;
}

.c29 :hover,
.c29 :focus {
  fill: #0E76A8;
}

.c30 {
  padding: 0px;
}

.c30 :hover,
.c30 :focus {
  fill: #0060df;
}

.c24 {
  gap: 1.5rem;
  justify-content: center;
}

.c22 {
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
}

.c22 >.,
.c22 >.c23 {
  align-items: center;
  display: flex;
  flex: 1;
  flex-direction: row;
  justify-content: center;
}

.c21 {
  align-items: center;
  background-color: rgb(0, 98, 114);
  color: rgb(255, 255, 255);
  display: flex;
  grid-area: footer;
  justify-content: center;
}

.c5 {
  font-size: 1.75rem;
  line-height: 2.25rem;
  font-family: "Krana Fat",Trebuchet MS;
}

.c8 {
  font-size: 1.5rem;
  line-height: 2rem;
  font-family: "IBM Plex Sans",Trebuchet MS;
}

.c11 {
  align-items: center;
  display: flex;
  gap: 2.5rem;
  width: 50%;
  justify-content: flex-start;
}

.c12 {
  align-items: center;
  display: flex;
  gap: 2.5rem;
  width: 50%;
  justify-content: flex-end;
}

.c9 {
  display: flex;
  flex-direction: row;
  margin: auto;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  width: 75rem;
}

.c2 {
  align-items: center;
  display: flex;
  flex: 1;
  justify-content: space-between;
  margin-left: 0.5rem;
  margin-right: 0.5rem;
}

.c6 {
  align-items: center;
  background: rgb(0, 98, 114);
  display: flex;
  flex-direction: column;
  gap: 2.5rem;
  justify-content: center;
  overflow: hidden;
  position: absolute;
  top: 3.75rem;
  transition: height 0.3s ease-in-out;
  width: 100vw;
  height: 0;
}

.c6 .c7 {
  transition: opacity 0.3s ease-in-out;
}

.c6 .c7 {
  opacity: 0;
}

.c3 {
  display: flex;
}

.c10 {
  display: none;
}

.c1 {
  background-color: rgb(0, 98, 114);
  box-sizing: border-box;
  display: flex;
  flex-direction: row;
  height: 3.75rem;
  position: fixed;
  user-select: none;
  width: 100%;
  z-index: 50;
}

.c17 {
  font-size: 3rem;
  line-height: 1;
  font-family: "Krana Fat",Trebuchet MS;
  position: fixed;
  top: 0.5rem;
  z-index: 50;
}

.c16 {
  color: rgb(248, 207, 169);
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
  padding: 0.875rem;
}

.c20 {
  bottom: 0;
  margin-top: auto;
  right: -5rem;
}

.c18 {
  display: flex;
  flex: 1;
  overflow: hidden;
  position: relative;
}

.c18 .c19 {
  width: 360px;
}

.c15 {
  align-items: stretch;
  background: rgb(0, 98, 114);
  display: flex;
  flex-direction: column;
  grid-column: 1/-1;
  height: 100vh;
  padding-top: 3.75rem;
}

.c13 {
  background-color: rgb(255, 255, 255);
  grid-area: main;
}

.c14 {
  display: grid;
  grid-template-columns: 1fr 0.5rem min(calc(75rem - 1rem), calc(100% - 1.125rem)) 0.5rem 1fr;
}

.c0 {
  display: grid;
  grid-template-areas: "main" "footer";
  grid-template-columns: repeat(1, minmax(0, 1fr));
  grid-template-rows: 1fr 9rem;
  min-height: 100vh;
  position: relative;
}

@media (min-width: 1200px) {
  .c22 {
    flex-direction: row;
    padding-left: 0.5rem;
    padding-right: 0.5rem;
    width: 75rem;
  }

  .c22 >.{
    justify-content: flex-start;
  }

  .c22 >.c23 {
    justify-content: flex-end;
  }
}

@media (min-width: 1200px) {
  .c2 {
    display: none;
  }
}

@media (min-width: 1200px) {
  .c6 {
    display: none;
  }
}

@media (min-width: 1200px) {
  .c3 {
    display: none;
  }
}

@media (min-width: 1200px) {
  .c10 {
    display: flex;
  }
}

@media (min-width: 1200px) {
  .c17 {
    font-size: 6rem;
    line-height: 1;
    position: relative;
  }
}

@media (min-width: 1200px) {
  .c16 {
    align-items: flex-start;
    gap: 3rem;
    justify-content: center;
    padding: 3.75rem;
    width: 50%;
  }
}

@media (min-width: 1200px) {
  .c20 {
    position: absolute!important;
  }
}

@media (min-width: 1200px) {
  .c18 {
    overflow: visible;
    width: 50%;
  }

  .c18 .c19 {
    width: 560px;
  }
}

@media (min-width: 1200px) {
  .c15 {
    flex-direction: row-reverse;
    height: 45rem;
  }
}

@media (min-width: 1200px) {
  .c0 {
    grid-template-rows: 1fr 6rem;
  }
}

<div>
  <div
    class="c0"
  >
    <header
      class="c1"
    >
      <div
        class="c2 c3"
      >
        <a
          class="c4 c5"
          href="/"
          title="Lauri Lavanti"
        >
          Lauri Lavanti
        </a>
        <div
          aria-expanded="false"
          aria-label="Avaa valikko"
          class="hamburger-react"
          role="button"
          style="cursor: pointer; height: 48px; position: relative; transition: 0.3s ease-in-out; user-select: none; width: 48px; outline: none;"
          tabindex="0"
        >
          <div
            style="transition: 0.15s ease-in-out 0.15s; transform: none;"
          >
            <div
              style="background: rgb(248, 207, 169); height: 3px; left: 4px; position: absolute; width: 40px; top: 12px; transition: 0.15s ease-in-out 0s; transform: none;"
            />
          </div>
          <div
            style="transition: 0.15s ease-in-out; opacity: 1;"
          >
            <div
              style="background: rgb(248, 207, 169); height: 3px; left: 4px; position: absolute; width: 40px; top: 23px; transition: 0.15s ease-in-out;"
            />
          </div>
          <div
            style="transition: 0.15s ease-in-out 0.15s; transform: none;"
          >
            <div
              style="background: rgb(248, 207, 169); height: 3px; left: 4px; position: absolute; width: 40px; top: 34px; transition: 0.15s ease-in-out 0s; transform: none;"
            />
          </div>
        </div>
      </div>
      <div
        class="c6 c3"
      >
        <a
          class="c4 c7 c8"
          href="/minusta/"
          title="Lauri Lavanti - Liberaalia ja kestävää politiikkaa"
        >
          Minusta
        </a>
        <a
          class="c4 c7 c8"
          href="/blogi/"
          title="Blogi"
        >
          Blogi
        </a>
        <a
          class="c4 c7 c8"
          href="/ota-yhteytta/"
          title="Ota yhteyttä"
        >
          Ota yhteyttä
        </a>
      </div>
      <div
        class="c9 c10"
      >
        <div
          class="c11"
        >
          <a
            class="c4 c5"
            href="/"
            title="Lauri Lavanti"
          >
            Lauri Lavanti
          </a>
        </div>
        <div
          class="c12"
        >
          <a
            class="c4 c7 c8"
            href="/minusta/"
            title="Lauri Lavanti - Liberaalia ja kestävää politiikkaa"
          >
            Minusta
          </a>
          <a
            class="c4 c7 c8"
            href="/blogi/"
            title="Blogi"
          >
            Blogi
          </a>
          <a
            class="c4 c7 c8"
            href="/ota-yhteytta/"
            title="Ota yhteyttä"
          >
            Ota yhteyttä
          </a>
        </div>
      </div>
    </header>
    <main
      class="c13"
    >
      <article
        class="c14"
      >
        <div
          class="c15"
        >
          <div
            class="c16"
          >
            <h1
              class="c17"
            />
          </div>
          <div
            class="c18"
          >
            <div
              class="gatsby-image-wrapper gatsby-image-wrapper-constrained c19 c20"
              data-gatsby-image-wrapper=""
              style="position: relative; overflow: hidden; display: inline-block; vertical-align: top;"
            >
              <div
                style="max-width: 4032px; display: block;"
              >
                <img
                  alt=""
                  aria-hidden="true"
                  role="presentation"
                  src="data:image/svg+xml;charset=utf-8,%3Csvg%20height='1728'%20width='4032'%20xmlns='http://www.w3.org/2000/svg'%20version='1.1'%3E%3C/svg%3E"
                  style="max-width: 100%; display: block; position: static;"
                />
              </div>
              <img
                alt=""
                aria-hidden="true"
                data-placeholder-image=""
                decoding="async"
                src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQEBLAEsAAD/2wBDABALDA4MChAODQ4SERATGCgaGBYWGDEjJR0oOjM9PDkzODdASFxOQERXRTc4UG1RV19iZ2hnPk1xeXBkeFxlZ2P/2wBDARESEhgVGC8aGi9jQjhCY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2P/wAARCAAJABQDAREAAhEBAxEB/8QAFQABAQAAAAAAAAAAAAAAAAAABQT/xAAiEAACAQIGAwEAAAAAAAAAAAABAhEAAwQFEhMxcTI1QXL/xAAYAQEAAwEAAAAAAAAAAAAAAAADAAIEAf/EABsRAQACAwEBAAAAAAAAAAAAAAABAgMRMSES/9oADAMBAAIRAxEAPwA6zlpYFt6BMERxQ7X+TOZ4BsFhVu7qvpUK2lYHdTLTUbHb3kASzIYVWjn6aBWfV9vxPVLLQQz71dj8iu5OQO/Atrg91msN/9k="
                style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
              />
              <picture>
                <source
                  sizes="(min-width: 4032px) 4032px, 100vw"
                  srcset="https://images.ctfassets.net/44t6u1r4zgqq/5aPvGwEnquvx8jkXJmkYE5/25e52ab22adc2730dce65ab3686cf060/Lauri-Lavanti-21-9.jpg?w=1008&h=432&q=50&fm=webp 1008w,https://images.ctfassets.net/44t6u1r4zgqq/5aPvGwEnquvx8jkXJmkYE5/25e52ab22adc2730dce65ab3686cf060/Lauri-Lavanti-21-9.jpg?w=2016&h=864&q=50&fm=webp 2016w,https://images.ctfassets.net/44t6u1r4zgqq/5aPvGwEnquvx8jkXJmkYE5/25e52ab22adc2730dce65ab3686cf060/Lauri-Lavanti-21-9.jpg?w=4000&h=1714&q=50&fm=webp 4000w"
                  type="image/webp"
                />
                <img
                  alt="Kuva Lauri Lavannista, taustalla näkyy metsää"
                  data-gatsby-image-ssr=""
                  data-main-image=""
                  decoding="async"
                  loading="eager"
                  sizes="(min-width: 4032px) 4032px, 100vw"
                  src="https://images.ctfassets.net/44t6u1r4zgqq/5aPvGwEnquvx8jkXJmkYE5/25e52ab22adc2730dce65ab3686cf060/Lauri-Lavanti-21-9.jpg?w=1008&h=432&fl=progressive&q=50&fm=jpg"
                  srcset="https://images.ctfassets.net/44t6u1r4zgqq/5aPvGwEnquvx8jkXJmkYE5/25e52ab22adc2730dce65ab3686cf060/Lauri-Lavanti-21-9.jpg?w=1008&h=432&fl=progressive&q=50&fm=jpg 1008w,https://images.ctfassets.net/44t6u1r4zgqq/5aPvGwEnquvx8jkXJmkYE5/25e52ab22adc2730dce65ab3686cf060/Lauri-Lavanti-21-9.jpg?w=2016&h=864&fl=progressive&q=50&fm=jpg 2016w,https://images.ctfassets.net/44t6u1r4zgqq/5aPvGwEnquvx8jkXJmkYE5/25e52ab22adc2730dce65ab3686cf060/Lauri-Lavanti-21-9.jpg?w=4000&h=1714&fl=progressive&q=50&fm=jpg 4000w"
                  style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; object-fit: contain; opacity: 0;"
                />
              </picture>
              <noscript />
              <script
                type="module"
              >
                const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1,e.parentNode.parentNode.querySelector("[data-placeholder-image]").style.opacity=0)}}
              </script>
            </div>
          </div>
        </div>
      </article>
    </main>
    <footer
      class="c21"
    >
      <div
        class="c22"
      >
        <div
          class=""
        >
          <img
            alt="Vihreiden logo ja teksti "Vihreät De Gröna""
            src="../../../static/images/Vihreat_Logo_HOR_NEG_FIN_SWE_ENG.png"
            width="200"
          />
        </div>
        <ul
          class="c23 c24"
        >
          <li
            class="c25"
          >
            <a
              class="c26"
              href="https://www.facebook.com/laurilavanti"
              rel="me noopener noreferrer"
              target="_blank"
              title="Facebook"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M512 256C512 114.6 397.4 0 256 0S0 114.6 0 256C0 376 82.7 476.8 194.2 504.5V334.2H141.4V256h52.8V222.3c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H287V510.1C413.8 494.8 512 386.9 512 256h0z"
                />
              </svg>
            </a>
          </li>
          <li
            class="c27"
          >
            <a
              class="c26"
              href="https://www.threads.net/@laurilavanti"
              rel="me noopener noreferrer"
              target="_blank"
              title="Threads"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 448 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M331.5 235.7c2.2 .9 4.2 1.9 6.3 2.8c29.2 14.1 50.6 35.2 61.8 61.4c15.7 36.5 17.2 95.8-30.3 143.2c-36.2 36.2-80.3 52.5-142.6 53h-.3c-70.2-.5-124.1-24.1-160.4-70.2c-32.3-41-48.9-98.1-49.5-169.6V256v-.2C17 184.3 33.6 127.2 65.9 86.2C102.2 40.1 156.2 16.5 226.4 16h.3c70.3 .5 124.9 24 162.3 69.9c18.4 22.7 32 50 40.6 81.7l-40.4 10.8c-7.1-25.8-17.8-47.8-32.2-65.4c-29.2-35.8-73-54.2-130.5-54.6c-57 .5-100.1 18.8-128.2 54.4C72.1 146.1 58.5 194.3 58 256c.5 61.7 14.1 109.9 40.3 143.3c28 35.6 71.2 53.9 128.2 54.4c51.4-.4 85.4-12.6 113.7-40.9c32.3-32.2 31.7-71.8 21.4-95.9c-6.1-14.2-17.1-26-31.9-34.9c-3.7 26.9-11.8 48.3-24.7 64.8c-17.1 21.8-41.4 33.6-72.7 35.3c-23.6 1.3-46.3-4.4-63.9-16c-20.8-13.8-33-34.8-34.3-59.3c-2.5-48.3 35.7-83 95.2-86.4c21.1-1.2 40.9-.3 59.2 2.8c-2.4-14.8-7.3-26.6-14.6-35.2c-10-11.7-25.6-17.7-46.2-17.8H227c-16.6 0-39 4.6-53.3 26.3l-34.4-23.6c19.2-29.1 50.3-45.1 87.8-45.1h.8c62.6 .4 99.9 39.5 103.7 107.7l-.2 .2zm-156 68.8c1.3 25.1 28.4 36.8 54.6 35.3c25.6-1.4 54.6-11.4 59.5-73.2c-13.2-2.9-27.8-4.4-43.4-4.4c-4.8 0-9.6 .1-14.4 .4c-42.9 2.4-57.2 23.2-56.2 41.8l-.1 .1z"
                />
              </svg>
            </a>
          </li>
          <li
            class="c28"
          >
            <a
              class="c26"
              href="https://www.instagram.com/laurilavanti/"
              rel="me noopener noreferrer"
              target="_blank"
              title="Instagram"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 448 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"
                />
              </svg>
            </a>
          </li>
          <li
            class="c29"
          >
            <a
              class="c26"
              href="https://www.linkedin.com/in/lapanti"
              rel="me noopener noreferrer"
              target="_blank"
              title="LinkedIn"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 448 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"
                />
              </svg>
            </a>
          </li>
          <li
            class="c30"
          >
            <a
              class="c26"
              href="https://bsky.app/profile/laurilavanti.fi"
              rel="me noopener noreferrer"
              target="_blank"
              title="Bluesky"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 576 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M407.8 294.7c-3.3-.4-6.7-.8-10-1.3c3.4 .4 6.7 .9 10 1.3zM288 227.1C261.9 176.4 190.9 81.9 124.9 35.3C61.6-9.4 37.5-1.7 21.6 5.5C3.3 13.8 0 41.9 0 58.4S9.1 194 15 213.9c19.5 65.7 89.1 87.9 153.2 80.7c3.3-.5 6.6-.9 10-1.4c-3.3 .5-6.6 1-10 1.4C74.3 308.6-9.1 342.8 100.3 464.5C220.6 589.1 265.1 437.8 288 361.1c22.9 76.7 49.2 222.5 185.6 103.4c102.4-103.4 28.1-156-65.8-169.9c-3.3-.4-6.7-.8-10-1.3c3.4 .4 6.7 .9 10 1.3c64.1 7.1 133.6-15.1 153.2-80.7C566.9 194 576 75 576 58.4s-3.3-44.7-21.6-52.9c-15.8-7.1-40-14.9-103.2 29.8C385.1 81.9 314.1 176.4 288 227.1z"
                />
              </svg>
            </a>
          </li>
        </ul>
      </div>
    </footer>
  </div>
  <svg
    aria-hidden="true"
    style="height: 0px; overflow: hidden; position: absolute; width: 0px;"
    version="1.1"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:xlink="http://www.w3.org/1999/xlink"
  >
    <defs>
      <svg
        height="0"
        width="0"
      >
        <radialgradient
          cx="30%"
          cy="107%"
          id="instagram-gradient"
          r="150%"
        >
          <stop
            offset="0"
            stop-color="#fdf497"
          />
          <stop
            offset="0.05"
            stop-color="#fdf497"
          />
          <stop
            offset="0.45"
            stop-color="#fd5949"
          />
          <stop
            offset="0.6"
            stop-color="#d6249f"
          />
          <stop
            offset="0.9"
            stop-color="#285AEB"
          />
        </radialgradient>
      </svg>
    </defs>
  </svg>
</div>
`;
